# formulaparser

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo.py
src/formulaparser/: __init__.py  ast_nodes.py  func_manager.py  lexer.py  op_manager.py  parser.py
tests/: test_parser.py
